--- a/Plan/fabric/build.gradle
+++ b/Plan/fabric/build.gradle
@@ -8,9 +8,9 @@ dependencies {
 
     shadow "net.playeranalytics:platform-abstraction-layer-api:$palVersion"
 
-    minecraft "com.mojang:minecraft:1.19.3"
-    mappings "net.fabricmc:yarn:1.19.3+build.2:v2"
-    modImplementation "net.fabricmc:fabric-loader:0.14.11"
+    minecraft "com.mojang:minecraft:23w06a"
+    mappings "net.fabricmc:yarn:23w06a+build.9:v2"
+    modImplementation "net.fabricmc:fabric-loader:0.14.14"
     modImplementation('me.lucko:fabric-permissions-api:0.2-SNAPSHOT')
 
     // Fabric API
@@ -24,7 +24,7 @@ dependencies {
     ]
 
     apiModules.forEach {
-        modImplementation(fabricApi.module(it, "0.68.1+1.19.3"))
+        modImplementation(fabricApi.module(it, "0.73.5+1.19.4"))
     }
 
     testImplementation project(path: ":common", configuration: 'testArtifacts')
